--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ button {
   color: #fff;
   border: none;
   border-radius: 4px;
-  padding: 5px 20px;
+  padding: 8px 20px;
   outline: none;
   cursor: pointer;
 }
@@ -18,6 +18,7 @@ textarea {
   border: 1px solid #000;
   outline: none;
   border-radius: 4px;
+  font-family: "monospace";
 
   &:focus {
     border-color: blue;
